# api/swagger/swagger.yaml
@@ -165,7 +165,7 @@ paths:
           in: query  
           type: string
           required: false
-      operationId: getVideogames
+      operationId: getVideoGames
       responses:
         "200":
           description: Success
@@ -183,7 +183,7 @@ paths:
           description: The videogame to create.
           schema:
             $ref: "#/definitions/VideoGame"
-      operationId: createVideogame
+      operationId: createVideoGame
       responses:
         "201":
           description: Success
@@ -204,7 +204,7 @@ paths:
           type: string
           in: path
           required: true
-      operationId: getVideogameById
+      operationId: getVideoGameById
       responses:
         "200":
           description: Success
@@ -228,7 +228,7 @@ paths:
           description: The videogame to update.
           schema:
             $ref: "#/definitions/VideoGame"
-      operationId: updateVideogame
+      operationId: updateVideoGame
       responses:
         "200":
           description: Success
@@ -247,7 +247,7 @@ paths:
           type: string
           in: path
           required: true
-      operationId: deleteVideogame
+      operationId: deleteVideoGame
       responses:
         "200":
           description: Success
@@ -263,7 +263,7 @@ paths:
 # complex objects have schema definitions
 definitions:
 
-  Videogame:
+  VideoGame:
     type: object
     properties:
       name:
